# pyspark_course_excercises

./: README.md  pyproject.toml
hw1/: .gitignore
hw1/notebooks/: Video Scoring.ipynb
hw2/: .gitignore
hw2/data_quality/: comments_checks.yml  comments_checks_2.yml  test_dq.py
hw2/tests/: test_udf.py
hw2/video_analytics/: functions.py
