[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
pyarrow = "^14.0.1"
chispa = "^0.9.4"
pytest = "^7.4.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
soda-core-spark-df = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
